--- a/Registro_Med/regmedicos.html
+++ b/Registro_Med/regmedicos.html
@@ -4,12 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
         <link rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
             integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
             crossorigin="anonymous">
-            
         <title>Agenda</title>
         <link href="https://fonts.googleapis.com/css2?family=Jost:300,400,700,900" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
@@ -113,8 +111,9 @@
                     </div>
 
                     <div>
-                        <input type="submit" id="guardar" value="Guardar /
-                            Actualizar">
+                        <!-- uno u otro dependiendo lo que se vaya a necesitar -->
+                        <input type="submit" id="guardar" value="Guardar">
+                        <input type="submit" id="guardar" value="Actualizar">
                     </div>
                 </form>
 
